--- a/stuff/NeuralNet.ipynb
+++ b/stuff/NeuralNet.ipynb
@@ -215,83 +215,129 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import numpy as np\n",
       "class NN(object):\n",
       "    def __init__(self, theta = None):\n",
       "        if theta == None:\n",
       "            self.theta = np.random.randn(12).reshape(3,4)\n",
       "        else:\n",
       "            self.theta = theta\n",
+      "        #self.memory = np.random.randn(3)    \n",
       "    def sigmoid(self, z):\n",
       "        return 1 / (1 + np.exp(-z))\n",
       "    \n",
       "    def predict(self, X):\n",
       "        ones = None\n",
+      "\n",
+      "        \n",
       "        if len(X.shape) == 1:\n",
       "            ones = np.array(1).reshape(1,)\n",
       "        else:\n",
-      "            ones = np.ones(X.shape[0]).reshape(X.shape[0],1)\n",
-      "        \n",
+      "            ones = np.ones(X.shape[0]).reshape(X.shape[0],1)        \n",
       "        X = np.hstack((ones, X))\n",
+      "        #print self.memory\n",
+      "        #X = np.hstack((self.memory,X))\n",
+      "        #print X\n",
       "        out = self.sigmoid(np.dot(self.theta,X.T))\n",
       "        if len(out.shape)>1:\n",
       "            out = out.mean(axis = 1)\n",
       "        out = out.round()\n",
       "        return out\n",
-      "\n",
+      "    def fit(self, X, target):\n",
+      "        while True:\n",
+      "            new_net = NN(self.theta + 1.7*np.random.randn(12).reshape(3,4))\n",
+      "            if (new_net.predict(X) == target).all():\n",
+      "                break\n",
+      "        self.theta = new_net.theta \n",
       "        \n",
-      "X = np.array([0,0,1])        \n",
-      "nn = NN()\n",
-      "print nn.predict(X)\n",
+      "    def train(self, X_matrix, target_matrix, epochs = 2):\n",
+      "        for e in range(epochs):\n",
+      "            #print 'epochs: '+ str(e)\n",
+      "            for i in range(len(target_matrix)):\n",
+      "                self.fit(X_matrix[i],target_matrix[i])\n",
+      "        \n",
       "\n",
-      "nn = NN()\n",
-      "X = np.array([[0,0,1],[1,1,1]])\n",
-      "print nn.predict(X)\n",
-      "        \n"
+      "X_matrix = np.array([[0,0,0],[1,0,1],[0,1,0]])\n",
+      "zero = NN()\n",
+      "z = np.array([[0,0,0],[0,0,0],[0,0,0]])\n",
+      "zero.train(X_matrix,z)\n",
+      "zero.predict(np.array([1,0,0]))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 84,
        "text": [
-        "[ 1.  1.  0.]\n",
-        "[ 1.  1.  1.]\n"
+        "array([ 0.,  0.,  0.])"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "np.random.seed(1)\n",
-      "X = np.array([[0,0,0],[0,0,1],[0,1,0]])\n",
-      "for i in range(10):\n",
-      "    zero = NN()\n",
-      "    #print zero.predict(X[0])\n",
-      "np.random.seed(1)\n",
-      "zero = NN()\n",
-      "zero = NN()\n",
-      "\n",
-      "print zero.predict(X[0]) \n",
-      "print zero.predict(X[1])\n",
-      "\n",
-      "for i in range(9):\n",
-      "    baby_zero = NN(zero.theta + 0.7*np.random.randn(12).reshape(3,4))\n",
-      "    print baby_zero.predict(X[1]),\n",
-      "    print baby_zero.predict(X[0])\n",
+      "for i in range(1):\n",
+      "    nn = NN()\n",
+      "    X = np.array([[0,0,1],[1,1,1]])\n",
       "    \n",
-      "print baby_zero.predict(X[2]) \n",
+      "        \n",
+      "    nn.fit(X,np.array([0,0,0]))\n",
+      "        \n",
+      "    X_matrix = np.array([[[0,0,1],[1,1,1]],\n",
+      "                        [[0,0,1],[0,0,1]],\n",
+      "                        [[1,1,1],[1,1,0]],\n",
+      "                        [[1,0,1],[0,1,0]]])\n",
+      "        \n",
+      "    tick = np.array([[0,0,1],[0,0,1],[1,1,0],[0,0,0]])\n",
+      "    nn.train(X_matrix,tick, epochs = 10)\n",
+      "    print nn.predict(X)\n",
+      "    print 'here'\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": "*"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class MemNet(NN):\n",
+      "    def __init__(self, theta = None, memory = None):\n",
+      "        NN.__init__(self, theta)\n",
+      "        if memory == None:\n",
+      "            self.memory = np.random.randn(3) \n",
+      "        else:\n",
+      "            self.memory = memory\n",
+      "            \n",
+      "    def predict(self, X):\n",
+      "        ones = None\n",
       "\n",
-      "for i in range(7):\n",
-      "    zero = NN(baby_zero.theta + 0.7*np.random.randn(12).reshape(3,4))\n",
-      "    print zero.predict(X[2]),\n",
-      "    print zero.predict(X[1]) == np.array([0,0,0]),\n",
-      "    print zero.predict(X[0])\n",
-      "if (zero.predict(X[2]) == np.array([0,0,0])).all():\n",
-      "    print 'y'"
+      "        \n",
+      "        if len(X.shape) == 1:\n",
+      "            ones = np.array(1).reshape(1,)\n",
+      "        else:\n",
+      "            ones = np.ones(X.shape[0]).reshape(X.shape[0],1)        \n",
+      "        X = np.hstack((ones, X))\n",
+      "        #print self.memory\n",
+      "        #X = np.hstack((self.memory,X))\n",
+      "        #print X\n",
+      "        out = self.sigmoid(np.dot(self.theta,X.T))\n",
+      "        if len(out.shape)>1:\n",
+      "            out = out.mean(axis = 1)\n",
+      "        out = out.round()\n",
+      "        return out\n",
+      "            \n",
+      "click = MemNet(memory = np.array([0,0,0]))         \n",
+      "X = np.array([[0,0,1],[0,0,1],[0,0,1],[0,0,1]])\n",
+      "z = np.array([[0,0,0],[0,0,1],[0,1,0],[0,1,1]])\n",
+      "click.train(X,z)\n",
+      "click.predict(np.array([0,0,1]))"
      ],
      "language": "python",
      "metadata": {},
@@ -300,38 +346,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[ 0.  0.  0.]\n",
-        "[ 0.  1.  0.]\n",
-        "[ 0.  0.  0.] [ 1.  0.  0.]\n",
-        "[ 0.  1.  1.] [ 0.  0.  0.]\n",
-        "[ 0.  1.  1.] [ 0.  0.  0.]\n",
-        "[ 0.  1.  1.] [ 0.  1.  1.]\n",
-        "[ 0.  1.  0.] [ 0.  0.  0.]\n",
-        "[ 0.  1.  0.] [ 0.  0.  0.]\n",
-        "[ 0.  1.  0.] [ 0.  0.  0.]\n",
-        "[ 0.  1.  0.] [ 0.  1.  0.]\n",
-        "[ 0.  0.  0.] [ 0.  0.  0.]\n",
-        "[ 1.  0.  0.]\n",
-        "[ 1.  1.  0.] [ True  True  True] [ 0.  0.  0.]\n",
-        "[ 1.  0.  0.] [False  True  True] [ 1.  0.  0.]\n",
-        "[ 1.  0.  0.] [ True  True  True] [ 0.  0.  0.]\n",
-        "[ 1.  1.  1.] [False False  True] [ 1.  1.  0.]\n",
-        "[ 1.  1.  0.] [ True  True  True] [ 0.  0.  0.]\n",
-        "[ 1.  1.  0.] [False False  True] [ 1.  0.  0.]\n",
-        "[ 0.  0.  0.] [ True  True  True] [ 0.  0.  0.]\n",
-        "y\n"
+        "epochs: 0\n",
+        "epochs: 1\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 57,
+       "text": [
+        "array([ 0.,  1.,  1.])"
        ]
       }
      ],
-     "prompt_number": 44
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 57
     }
    ],
    "metadata": {}
