getting done with HW 2

--- a/prob1/prob_1.ipynb
+++ b/prob1/prob_1.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2e0383001ad22328b540f99f99b1bb8749bab9fa7147602bbc8b7d5a3a256c1a"
+  "signature": "sha256:dc8f1e0ff13705e3bb5f1288555b63aae848e42ab7b47374e54e328b98833d42"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Homework Set 1"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -27,14 +35,6 @@
       }
      ],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Histograms and Frequencies"
-     ]
     },
     {
      "cell_type": "heading",
