--- a/prob1/prob_2.ipynb
+++ b/prob1/prob_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5077dfc62ebd6e8051504459cfd79947f1fff2538d166359c64845322d1d683"
+  "signature": "sha256:4bb341cc38849b23bbc77090b28ecd4dcbeed5bf89a0e7bc57b7b931fc073398"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,8 +30,7 @@
       "%pylab inline                       \n",
       "%load_ext rpy2.ipython              \n",
       "from pandas import DataFrame\n",
-      "from fractions import Fraction\n",
-      "from matplotlib_venn import venn2"
+      "from fractions import Fraction"
      ],
      "language": "python",
      "metadata": {},
@@ -46,7 +45,7 @@
        ]
       }
      ],
-     "prompt_number": 100
+     "prompt_number": 153
     },
     {
      "cell_type": "heading",
@@ -141,21 +140,75 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "Fraction(1,1) - (Fraction(1,64)+Fraction(9,64)+Fraction(27/64))"
+      "print(1 - (Fraction(1,64)+Fraction(9,64)+Fraction(27/64)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "27/64\n"
+       ]
+      }
+     ],
+     "prompt_number": 366
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Problem 7"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This problem is similar to problem 3, so let's change it up a bit and try some R out."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "simulations <- 10000\n",
+      "\n",
+      "get_prob <- function(sides){\n",
+      "    dice <- 1:8\n",
+      "    count <- 0\n",
+      "    for (i in 1:simulations){\n",
+      "        if (sample(dice,1) %in% sides){\n",
+      "            count <- count + 1\n",
+      "        }\n",
+      "    }\n",
+      "    count/simulations\n",
+      "}\n",
+      "cat('hy', get_prob(seq(1,2)))\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 126,
+       "output_type": "display_data",
        "text": [
-        "Fraction(27, 64)"
+        "hy 0.2525"
        ]
       }
      ],
-     "prompt_number": 126
+     "prompt_number": 364
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -177,12 +230,45 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Problem 11"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%%R\n",
+      "simulations <- 10000\n",
+      "dice <- 1:3\n",
+      "success <- rep(0,simulations)\n",
+      "\n",
+      "for (i in 1:simulations){\n",
+      "    for (j in 1:3){\n",
+      "        if (sample(dice,1) == 1){\n",
+      "            success[i] <- 1\n",
+      "            break\n",
+      "        }\n",
+      "    }    \n",
+      "}\n",
+      "\n",
+      "cat('Simulated: ', (mean(success)), 'Numeric: ', 1-(2/3)^3)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "Simulated:  0.7043 Numeric:  0.7037037"
+       ]
+      }
+     ],
+     "prompt_number": 175
     }
    ],
    "metadata": {}
