--- a/prob1/prob_2.ipynb
+++ b/prob1/prob_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4bb341cc38849b23bbc77090b28ecd4dcbeed5bf89a0e7bc57b7b931fc073398"
+  "signature": "sha256:6de1d8316093827687f82e56e454660101a1b98980c1fa5e709fd99be465b224"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -187,7 +187,9 @@
       "    }\n",
       "    count/simulations\n",
       "}\n",
-      "cat('hy', get_prob(seq(1,2)))\n"
+      "cat('Probability of even: ', get_prob(seq(1,8, by = 2)), '\\n')\n",
+      "cat('Probability of 3 or 6 : ', get_prob(c(3,6)), '\\n')\n",
+      "cat('....\\nThe rest are all more of the same\\n')\n"
      ],
      "language": "python",
      "metadata": {},
@@ -196,19 +198,14 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "hy 0.2525"
+        "Probability of even:  0.507 \n",
+        "Probability of 3 or 6 :  0.2597 \n",
+        "....\n",
+        "The rest are all more of the same\n"
        ]
       }
      ],
-     "prompt_number": 364
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 375
     },
     {
      "cell_type": "heading",
