--- a/prob1/prob_2.ipynb
+++ b/prob1/prob_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6de1d8316093827687f82e56e454660101a1b98980c1fa5e709fd99be465b224"
+  "signature": "sha256:95e5a47eb3415b31a2cfb2954f863dfd3898b74c91b54e94c4fb71a513e61dfc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,13 +39,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n",
-        "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-        "  %reload_ext rpy2.ipython\n"
+        "Populating the interactive namespace from numpy and matplotlib\n"
        ]
       }
      ],
-     "prompt_number": 153
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -93,22 +91,22 @@
         "    <tr>\n",
         "      <th>Club</th>\n",
         "      <td> 0.250000</td>\n",
-        "      <td> 0.273</td>\n",
+        "      <td> 0.243</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Diamond, Heart, or Spade</th>\n",
         "      <td> 0.750000</td>\n",
-        "      <td> 0.766</td>\n",
+        "      <td> 0.753</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Jack, 9, 10, and red</th>\n",
         "      <td> 0.115385</td>\n",
-        "      <td> 0.133</td>\n",
+        "      <td> 0.109</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Jack, Queen, King</th>\n",
         "      <td> 0.230769</td>\n",
-        "      <td> 0.239</td>\n",
+        "      <td> 0.221</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -116,17 +114,17 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 125,
+       "prompt_number": 2,
        "text": [
         "                          Numerical  Simulated\n",
-        "Club                       0.250000      0.273\n",
-        "Diamond, Heart, or Spade   0.750000      0.766\n",
-        "Jack, 9, 10, and red       0.115385      0.133\n",
-        "Jack, Queen, King          0.230769      0.239"
+        "Club                       0.250000      0.243\n",
+        "Diamond, Heart, or Spade   0.750000      0.753\n",
+        "Jack, 9, 10, and red       0.115385      0.109\n",
+        "Jack, Queen, King          0.230769      0.221"
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -153,7 +151,7 @@
        ]
       }
      ],
-     "prompt_number": 366
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -198,14 +196,14 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "Probability of even:  0.507 \n",
-        "Probability of 3 or 6 :  0.2597 \n",
+        "Probability of even:  0.5024 \n",
+        "Probability of 3 or 6 :  0.2477 \n",
         "....\n",
         "The rest are all more of the same\n"
        ]
       }
      ],
-     "prompt_number": 375
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -261,11 +259,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "Simulated:  0.7043 Numeric:  0.7037037"
+        "Simulated:  0.7027 Numeric:  0.7037037"
        ]
       }
      ],
-     "prompt_number": 175
+     "prompt_number": 5
     }
    ],
    "metadata": {}
