--- a/stat1/stat_2.ipynb
+++ b/stat1/stat_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0462459b49b4a6abdce02793b33c5fcf2caebb37938f6c7e5a9a8fe5cfede7e3"
+  "signature": "sha256:e25ddd3ec10365e6ca91403730e482bb33ba5d0bfb07a63e24c6365fbe56f1eb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -352,12 +352,144 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 5,
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s = \"\"\"Alabama 70.4 71.0 73.5 Montana 66.5 68.6 69.3\n",
+      "Alaska 61.2 62.9 67.3 Nebraska 68.5 66.8 68.4\n",
+      "Arizona 64.7 62.0 65.9 Nevada 57.0 61.1 65.5\n",
+      "Arkansas 66.6 66.6 70.2 NewHampshire 65.5 65.0 69.5\n",
+      "California 54.2 55.0 58.0 NewJersey 62.3 64.6 67.2\n",
+      "Colorado 63.6 64.5 69.1 NewMexico 68.2 67.1 70.3\n",
+      "Connecticut 69.0 69.0 71.6 NewYork 50.3 52.7 55.0\n",
+      "Delaware 70.3 71.5 75.6 NorthCarolina 68.0 70.4 70.0\n",
+      "Dist.ofColumbia 37.4 40.4 44.1 NorthDakota 69.9 68.2 69.5\n",
+      "Florida 67.2 67.1 68.7 Ohio 67.9 69.2 72.0\n",
+      "Georgia 62.7 69.3 71.7 Oklahoma 70.5 68.4 69.4\n",
+      "Hawaii 51.0 50.6 57.4 Oregon 61.5 63.1 66.2\n",
+      "Idaho 71.0 71.4 73.0 Pennsylvania 71.6 71.7 74.0\n",
+      "Illinois 60.6 68.2 70.2 RhodeIsland 61.4 56.6 59.6\n",
+      "Indiana 67.6 74.2 75.0 SouthCarolina 72.0 72.9 77.3\n",
+      "Iowa 69.9 72.8 73.9 SouthDakota 67.6 67.8 71.5\n",
+      "Kansas 68.3 67.5 70.2 Tennessee 67.6 68.8 70.1\n",
+      "Kentucky 68.5 73.2 73.5 Texas 60.5 61.8 63.8\n",
+      "Louisiana 70.2 64.9 67.1 Utah 71.5 72.7 72.7\n",
+      "Maine 73.7 76.5 73.9 Vermont 69.5 70.3 70.2\n",
+      "Maryland 65.6 66.9 72.0 Virginia 68.5 68.5 74.3\n",
+      "Massachusetts 60.5 61.7 62.7 Washington 66.8 63.1 67.0\n",
+      "Michigan 70.7 73.3 76.0 WestVirginia 75.9 74.3 77.0\n",
+      "Minnesota 70.0 75.4 77.3 Wisconsin 63.8 68.2 72.0\n",
+      "Mississippi 69.6 73.0 74.8 Wyoming 73.2 68.0 72.8\n",
+      "Missouri 69.2 70.2 74.6\"\"\"\n",
+      "\n",
+      "data = {}\n",
+      "s = s.split()\n",
+      "l =0 \n",
+      "for i, e in enumerate(s):\n",
+      "    if e.isalpha():\n",
+      "        data[e] = [s[i+1],s[i+2],s[i+3]]\n",
+      "        l += 1\n",
+      "       \n",
+      "housing = DataFrame(data, index = [1985,1996,2002]).T\n",
+      "housing.head()"
+     ],
+     "language": "python",
      "metadata": {},
-     "source": [
-      "3.12"
-     ]
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>1985</th>\n",
+        "      <th>1996</th>\n",
+        "      <th>2002</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Alabama</th>\n",
+        "      <td> 70.4</td>\n",
+        "      <td> 71.0</td>\n",
+        "      <td> 73.5</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Alaska</th>\n",
+        "      <td> 61.2</td>\n",
+        "      <td> 62.9</td>\n",
+        "      <td> 67.3</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Arizona</th>\n",
+        "      <td> 64.7</td>\n",
+        "      <td> 62.0</td>\n",
+        "      <td> 65.9</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Arkansas</th>\n",
+        "      <td> 66.6</td>\n",
+        "      <td> 66.6</td>\n",
+        "      <td> 70.2</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>California</th>\n",
+        "      <td> 54.2</td>\n",
+        "      <td> 55.0</td>\n",
+        "      <td> 58.0</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 83,
+       "text": [
+        "            1985  1996  2002\n",
+        "Alabama     70.4  71.0  73.5\n",
+        "Alaska      61.2  62.9  67.3\n",
+        "Arizona     64.7  62.0  65.9\n",
+        "Arkansas    66.6  66.6  70.2\n",
+        "California  54.2  55.0  58.0"
+       ]
+      }
+     ],
+     "prompt_number": 83
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R -i housing\n",
+      "housing <- data.frame(housing)\n",
+      "head(housing)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "  X1985 X1996 X2002\n",
+        "1  70.4  71.0  73.5\n",
+        "2  61.2  62.9  67.3\n",
+        "3  64.7  62.0  65.9\n",
+        "4  66.6  66.6  70.2\n",
+        "5  54.2  55.0  58.0\n",
+        "6  63.6  64.5  69.1\n"
+       ]
+      }
+     ],
+     "prompt_number": 106
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": []
     },
     {
      "cell_type": "heading",
@@ -381,7 +513,7 @@
      "input": [
       "%%R\n",
       "freq <- c(6,11,16,59,46,33,16,4)\n",
-      "barplot(freq)\n"
+      "barplot(freq)"
      ],
      "language": "python",
      "metadata": {},
@@ -392,7 +524,79 @@
        "png": "iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAMAAABKCk6nAAACGVBMVEUAAAABAQECAgIDAwMFBQUG\nBgYHBwcICAgKCgoLCwsMDAwNDQ0PDw8QEBARERETExMUFBQWFhYaGhobGxsdHR0eHh4fHx8iIiIk\nJCQlJSUmJiYnJycoKCgqKiorKystLS0vLy8wMDAxMTEzMzM0NDQ3Nzc4ODg5OTk6Ojo7Ozs+Pj4/\nPz9AQEBCQkJDQ0NERERFRUVHR0dISEhJSUlMTExNTU1OTk5PT09QUFBSUlJVVVVWVlZXV1dYWFhZ\nWVlcXFxeXl5fX19iYmJkZGRlZWVmZmZoaGhra2ttbW1vb29xcXFycnJzc3N1dXV2dnZ3d3d4eHh6\nenp7e3t8fHx9fX1/f3+AgICCgoKDg4OEhISFhYWIiIiJiYmKioqLi4uNjY2Ojo6Pj4+SkpKVlZWX\nl5eYmJiZmZmcnJyenp6fn5+goKCjo6OlpaWoqKipqamqqqqrq6utra2urq6vr6+wsLCxsbGzs7O0\ntLS1tbW2tra4uLi6urq7u7u8vLy9vb2+vr7AwMDBwcHCwsLDw8PFxcXGxsbHx8fKysrLy8vMzMzN\nzc3R0dHS0tLU1NTV1dXW1tbX19fY2NjZ2dnb29vc3Nzd3d3e3t7f39/g4ODh4eHi4uLj4+Pk5OTl\n5eXm5ubo6Ojp6enq6urr6+vs7Ozu7u7v7+/x8fHy8vL09PT19fX29vb4+Pj5+fn6+vr7+/v8/Pz9\n/f3+/v7///+3ctjiAAAJa0lEQVR4nO3d+5fMdRzH8Y1ERZJKUXIplK2tpNxKFIpabaLLSsktoVXR\nxV3k0k0qbUli16VF2O9fmGZmj8/OeJ/5zPc7s5/9vDyfP9jj+32f3c/sgzkzZ8/Zd11C0tWFPgDV\nNoDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyA\nxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUD\nWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8ReBTLV5tDX3OHkkR+LP6BT4NC33OHkkSeN5On0aH\nPmePBLB4AIsHsHgAiweweACLB7B4AIsHsHgAiweweACLB7B4AIsHsHgAiweweACLB7B4AIsHsHgA\niweweACLB7B4AIsHsHgAiweweACLB7B4AIsHsHgAiweweACLB7B4AIsHsHgAiweweACLB7B4AIvn\nBdx55nKtz1HNAHYqD9zxzr396vres+R8D5ymOgHsVB54VsOu9n/b90ye3QOnqU4AO5UHHvhX7sPZ\nwbU+StUC2Kk88Og1uQ8tY2p9lKoFsFN54AN33zdt9vSRdxzsgdNUJ4CdPF5FX9y+pnn19otXL7Q0\n5Br7Vu2OlSmAnTzfB588XXrt4xXVPUrVAtipPPATfyfHJvS58bHjxTcAjqHywHWtyYyZ/1xYMLX4\nBsAx5AU87HCStA0svgFwDHkA7704eUuS7BpefAPgGCoP/MidNw0alewetLr4BsAx5PMq+sIv3yT7\n95RcBjiGMvy4EOAYAlg8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDuKNpoU9N58I+\nqLQB3Dp+lU8PHQ37oNIGcOuTXtOPA9xrAtgJYICtAI4hgAG2AjiGAAbYCuAYAhhgK4BjCGCArQCO\nIYABtgI4hgAG2ArgGAIYYCuAYwhggK0AjiGAAbYCOIYABtgK4BgCGGArgGMIYICtzWcAx1CGzWcA\nx1CGzWcAx1CGzWcAx1CGzWcAx1CGzWcAx1CazWe787/U4Jmm2h0rUwA7+b4P3ue8iG4/mKt5eU1O\nlD2AnXyBB/9Zcomn6BgqD3xz3/+r69O3+AbAMVQe+ND4aUfa2m77rq34BsAx5PEUfWn5iC95ihYG\nTpJf62feCnDYB5U2vxdZl1fPaC+5CHAM8eNCgK0AjiGAAbYCOIYABtgK4BgCGGArgGMIYICtAI4h\ngAG2AjiGAAbYCuAYAhhgK4BjCGCArQCOIYABtgI4hgAG2ArgGAIYYCuAYwhggK0AjiGAAbYCOIYA\nBtgK4BgCGGArgGMIYICtrk/g5xq8+j7cw+8ewBUCj/aanvt5uIffPYABtgIY4DAB7AQwwFYAAxwm\ngJ0ABtgKYIDDBLATm8+ue2A2n4kDs/lMHJjNZ+LAbD4TB2bzmThw6eazE9tyLXqvdsfKFMBOnu+D\nz19y/lJYbTdlUU1OlD2AncoD/zhpVmt9v/4z2JuUSw94wuym219tP/r8s8U3ANYA7n/ydF1Hkpwc\nVHwDYA3gIYc6N1z5sG9k8Q2ANYAX3bU/Sf54ecja4hsAawB3bvstSX5eeqDkBsAawGYAAxwmgJ0A\nBtgKYIDDBLATwABbAQxwmAB2AhhgK4ABDhPATgADbAUwwGEC2AlggK0ABjhMADsBDLAVwACHCWAn\ngAG2AhjgMAHsBDDAVgADHCaAnQAG2ApggMMEsBPAAFsBDHCYAHYCGGArgAEOE8BOAANsBTDAYQLY\nCWCArQAGOEwAOwEMsBXAAIcJYCc2n133wGw+Ewdm85k4MJvPxIHZfCYOzOYzceDSzWeFABYBTk51\nXvnj0tXFWC0NuR6YX7NTZQtgp/LAP9x/w7Arx20tmeR/sAbww29c2D30AMCywAPOJMmmsZcAzo/r\nAY/amCSdU5oAzo/rAW+9ZdyJpG3MaIBz6QEnxzecTZLzGxqLrwMsAmwFMMBhAtgJYICtAAY4TAA7\nAQywFcAAhwlgJ4ABtgIY4DAB7AQwwFYAAxwmgJ0ABtgKYICr1Y45Xq3KT/ci4BV+B99Vu29dHMBL\nXl/v0bpH89O9CHiiz7nXv/Z27b51kQC/7/Nd3dH7gOu9ppcBDHDaAAbYCmA7gCsL4NQBDLAVwHYA\nVxbAqQMYYCuA7QCuLIBTBzDAVgDbAVxZAKcOYICtALYDuLIATh3AAFsBbAdwZQGcOoABtgLYDuDK\nAjh1AANsBbAdwJUFcOoABrgmq+12NntVWPUCcOpCrbab2rjYozmFvR8Apy7Uarupm30e+WqAsxZq\ntR3ATmGBa7PaDmCnsMC1WW0HsFPgV9Elq+225H/vQMPCDF8XYKfgb5OKOnMk1wfLM3xdgJ16G3Ah\nnqLtYgL+qaviGwDbxQQ8qW7A0FzFNwC2iwk4eWHeta8DbBcV8PZl174OsF1UwFYA2wEMsBPAAKcO\nYICtALYDGGAngAFOHcAAWwFsBzDATgADnDqAAbYC2A5ggJ0ABjh1AANsVQT87TavTuenAXaKA3js\niz5N/Cg/DbBTHMB+j6VxbX4aYCeAAU4dwABbAWwHMMBOAAOcOoABtgLYDmCAnQAGOHUA9yLgzXO8\nWleJEsC9CPil5vUerZxeiRLAvQl4jc/0pwADfDWAAbYC2A5ggJ0ABtgJYICdAAbYCmA7gAF2Ahhg\nJ4ABdgIYYCuA7QAG2AlggJ0ABtgJYICtALaLDNhr+yjATjEB+24fBdgpJuDS7aPH8r+MYdG73ebG\nLfNpRhfwmz7T87uA53p98i7gp72mRxSAH/SaHlsAHu41/VQBeKLX9Jwu4Fd8phdXGbh0++je/PLm\nxk3d5j70W/l8OD/9hd/01/np/X7Tn+Snf/ebXpmf7ljqNb30XH58hd8nL/xz2Og3XdgLuctv+qvq\nApvbRymGMmwfpRhKs32UIirD+2CKIYDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8\ngMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDF\nA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNY\nPIDFA1g8gMUDWDyAxQNYPIDFA1g8gMUDWDyAxQNYvP8AdKQW2U3ODggAAAAASUVORK5CYII=\n"
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For grouped data we have\n",
+      "\n",
+      "median $= L + \\frac w {f_m} (.5n -cf_b)$\n",
+      "\n",
+      "mean $\\approx \\frac {\\sum_i f_i y_i} n$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "median <- (60.1+100.1)/2 +(20/((59+46)/2))*(0.5*191 - (6+11+16))\n",
+      "mean <- sum(freq*seq(10,170, by = 20))/sum(freq)\n",
+      "mean"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "[1] 87.90576\n"
+       ]
+      }
+     ],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "hmmm...  but looking closely at the numbers, it looks like they skipped a bin, which completely messes up my numbers. I'm going to move on... "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "3.30"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "3.36"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "3.40"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
