--- a/stat1/stat_2.ipynb
+++ b/stat1/stat_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e25ddd3ec10365e6ca91403730e482bb33ba5d0bfb07a63e24c6365fbe56f1eb"
+  "signature": "sha256:25c5294128f512775fa2fc927a5d25e99ab2f6f60fbf9680b8a7a03d474f4f09"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -384,11 +384,10 @@
       "\n",
       "data = {}\n",
       "s = s.split()\n",
-      "l =0 \n",
+      "\n",
       "for i, e in enumerate(s):\n",
       "    if e.isalpha():\n",
-      "        data[e] = [s[i+1],s[i+2],s[i+3]]\n",
-      "        l += 1\n",
+      "        data[e] = [float(s[i+1]),float(s[i+2]),float(s[i+3])]\n",
       "       \n",
       "housing = DataFrame(data, index = [1985,1996,2002]).T\n",
       "housing.head()"
@@ -445,7 +444,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 83,
+       "prompt_number": 167,
        "text": [
         "            1985  1996  2002\n",
         "Alabama     70.4  71.0  73.5\n",
@@ -456,15 +455,19 @@
        ]
       }
      ],
-     "prompt_number": 83
+     "prompt_number": 167
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "%%R -i housing\n",
+      "par(mfrow=c(1,3))\n",
       "housing <- data.frame(housing)\n",
-      "head(housing)"
+      "colnames(housing) <- c('1985','1996','2002')\n",
+      "hist(housing$'1985')\n",
+      "hist(housing$'1996')\n",
+      "hist(housing$'2002')"
      ],
      "language": "python",
      "metadata": {},
@@ -472,18 +475,10 @@
       {
        "metadata": {},
        "output_type": "display_data",
-       "text": [
-        "  X1985 X1996 X2002\n",
-        "1  70.4  71.0  73.5\n",
-        "2  61.2  62.9  67.3\n",
-        "3  64.7  62.0  65.9\n",
-        "4  66.6  66.6  70.2\n",
-        "5  54.2  55.0  58.0\n",
-        "6  63.6  64.5  69.1\n"
-       ]
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAMAAABKCk6nAAAC6FBMVEUAAAABAQEDAwMEBAQFBQUG\nBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw8QEBARERESEhITExMUFBQWFhYXFxcYGBgZGRka\nGhobGxscHBwdHR0eHh4fHx8gICAhISEiIiIjIyMkJCQlJSUmJiYnJycoKCgpKSkqKiorKyssLCwt\nLS0uLi4vLy8wMDAxMTEyMjIzMzM0NDQ1NTU2NjY3Nzc4ODg5OTk6Ojo7Ozs8PDw9PT0+Pj4/Pz9A\nQEBBQUFCQkJDQ0NERERFRUVGRkZHR0dISEhKSkpLS0tMTExOTk5PT09QUFBRUVFSUlJTU1NUVFRV\nVVVWVlZXV1dYWFhZWVlaWlpbW1tcXFxdXV1eXl5fX19gYGBhYWFiYmJjY2NkZGRlZWVmZmZnZ2do\naGhpaWlqampra2tsbGxtbW1ubm5wcHBzc3N0dHR1dXV2dnZ3d3d4eHh5eXl6enp7e3t8fHx9fX1+\nfn5/f3+AgICBgYGCgoKDg4OEhISFhYWGhoaHh4eIiIiJiYmKioqLi4uMjIyNjY2Ojo6Pj4+QkJCR\nkZGSkpKTk5OUlJSVlZWWlpaXl5eYmJiZmZmampqbm5ucnJydnZ2enp6fn5+goKChoaGioqKjo6Ok\npKSlpaWmpqanp6eoqKipqamqqqqrq6usrKytra2urq6vr6+wsLCxsbGysrKzs7O0tLS1tbW2tra3\nt7e4uLi5ubm6urq7u7u8vLy9vb2+vr6/v7/AwMDBwcHCwsLDw8PExMTFxcXGxsbHx8fIyMjJycnK\nysrLy8vMzMzNzc3Ozs7Pz8/Q0NDR0dHS0tLT09PU1NTV1dXW1tbX19fZ2dna2trb29vc3Nzd3d3e\n3t7f39/g4ODh4eHi4uLj4+Pk5OTl5eXm5ubn5+fo6Ojp6enq6urr6+vs7Ozt7e3u7u7v7+/w8PDx\n8fHy8vLz8/P09PT19fX29vb39/f4+Pj5+fn6+vr7+/v8/Pz9/f3+/v7///9DFKMQAAAVdklEQVR4\nnO2deZwU5Z2H21XIGgWP1VXjKvEGo3IvR7hBHRQYkJ3pAVYHZ1AIyUaWiAegYWBUYkDHWdiJUUhk\nBAPuusTgxoAYhHBoPIZjBHFZDHIYloATYN5/t6reprqq+63qut6ut3/9fT6f7k+/XW/VPHkfw8xU\n13QnGCBNIm4BIBcEJg4CEweBiYPAxEFg4iAwcRCYOAhMHAQmDgITB4GJg8DEQWDixBr4aJxf3AMU\n/BwCv5z4km1LvPNyWz78/LEj3r5k65DL9b3big9qf3pPnzZXrJrWc3XiBGPzq9lXd7cbfuTPJef2\n2H4skUgkUxsciMvPuDv90MU3v6+S36Fh53b94C/JdgP/17gzhmf83AMf3cWHGxK7vQnuTrznLHjm\naCm+P6a8bvCC0g8uOc12XFnNZtyw9bYH5nbcNeaezd/ZuXM/3+BEXH7G3fJvbJ04USW/2Vd+dMfA\nBVfsHnCvcceHKb+c/w9u7t72prV9EwOOT2h/+TPs2Kj24xI76y564PGdXdtc+7v5Fw5s/9At59dr\ne/Dt/RPX63ufU37hg638mdqrtAPtNI6iHa2uXek3x57mR6m57La/sIMft77DXrv47Go2vJpN77Sg\n69HKcS936DZ4l7Eh1wLm3c+4u/927Rgq+a1Yyr7fOVnCpnUy7ozhGT/HwG3anmMIPnHexjlPaP8F\nzjt/4wuJrbXt352kCSZmbG+o3tu5bP5Zv604e/2YztoefPvOxDZj71fmJfal9jAEjaPogolfPZfY\nzo/y9bMXXbo09fUGV7PJXQ/2+4cDf3f2We+8cv/W7sOdFy9OP+NuxHWXXb5SLb/ftKsrqWBPfcu4\nM4ZnTBwD/77pNUNwz+hzOzRoguMGs5a/ealiCNuqCZ5/mm0e0LND6fxL2Jxvs8c6aXvw7SnBNroU\nf0YT1PYwjqILXsS0KfwoG5vLH2+fXsDmq8/5Vo+yIcem3qiNH++QawHj8TPuKm7ZN/kapfxebLOQ\nld/BfvQd484Y5gx85p+YulkHRnR4L9E0t92Wf0tseezCjd/TBC9mLDlo742l8y9lc67hgnx7SrCt\nLsifWdB268PaHvpR9KNdrAvyo1T0Hf7Da9MLWH/vO/844+5u74+9esqdW7uPzLWA8fgZdwtv2FbW\nRSW/X59Vu3PPTy77Y5+Jxp0x9Bx4061trnjp+C23Hh/f/u+fYYcGf3MEF3z9qut732wR5NutgvyZ\nzzudr+1hHMUU5EfZN6JNt7fTC7i7x3mj/m9H3290/O327n87YI/YK24/4+7re9t13KCSX5X2a8c1\nx5Pt+v+PcWcMcwR24jezTi1PHPK3j/NRkmEP5HjkaI6SjMBIfORojpL0MNdn4Oa+V1+5IIiThKPI\nOzIlP5yqJA4CEweBiYPAxEFg4iAwcRCYOAhMHAQmDgITB4GJg8DEQWDiIDBxEJg4CEwcBCYOAhMH\ngYmDwMRBYOIgMHEQmDgITBwEJg4CEweBiYPAxJEXeEhXGx0bpH2lYKjuZ/Jcp66Z5PjrZCvyAg+w\nD998UtpXCobqfiaPrMt6aoBgmgMInEI5PxMEDobqfiYIHAzV/UwQOBiq+5kgcDBU9zNB4GCo7meC\nwMFQ3c8EgYOhup8JAgdDdT8TBA6G6n4mCBwM1f1MEDgYqvuZIHAwVPczQeBgqO5ngsDBUN3PBIGD\nobqfCQIHQ3U/EwQOhup+JggcDNX9TBA4GKr7mSBwMFT3M0HgYKjuZ4LAwVDdzwSBg6G6nwkCB0N1\nPxMEDobqfiYIHAzV/UwQOBiq+5kgcDBU9zNB4GCo7meCwMFQ3c8EgYOhup8JAgdDdT8TBA6G6n4m\nCBwM1f1MEDgYqvuZIHAwVPczQeBgqO5ngsDBUN3PBIGDobqfCQIHQ3U/E1mBW4PIOEsot4Cq+5nI\nCbyk16DeS4MJiSWUW0DV/UzkBK5oZa2VwYTEEsotoOp+JnICj1m7f115MCGxhHILqLqfiZzAe6eN\nm/6p8ejYvJqamh+869tL9QVU3c9ETuBHB/2UJY1HLWs0pi727aX6AqruZyIncDWbtSuZHj7/ii8n\ngYRyC6i6n4mcwKU7j065Kz1E4PiQE7ipgTVNSg8ROD7yciYLgeMDgYOhup8JAgdDdT8TBA6G6n4m\nxRr41Mlw+8v2C/tijUlxBp65ukt//ydfrMj1C/9ijUlxBk5WtLB7Qh1Brl/4F2tMijNwj/IDh0tD\nHUGuX/gXa0yKM/CGuqZXNxmPTi5vbGxc9KnvI2T4rSprtLEy3PfQ9Is1Qf1MijNwmmP1Gsnnfe+X\n4TenY72NLgdDWaVfrAnqZ1KcgUcNLSkpSQ/D+/14qH1cGi5w+BdrTIoz8PvzbUPlAod/scakOAOf\nPmAbKhc4/Is1JsUZOAPlAmeAwCFBYCcQOAUC+wWBLSBwSBDYCQROgcB+QWALCBwSBHYCgVMgsF8Q\n2AIChwSBnUDgFAjsFwS2gMAhQWAnEDgFAvsFgS0gcEgQ2AkEToHAfkFgCwgcEgR2AoFTILBfENgC\nAocEgZ1A4BQI7BcEtoDAIUFgJxA4BQL7BYEtIHBIENgJBE6BwH5BYAsIHBIEdgKBUyCwXxDYAgKH\nBIGdQOAUCOwXBLaAwCFBYCcQOAUC+wWBLSBwSBDYCQROgcB+QWALCBwSBHYCgVMgsF8Q2AIChwSB\nnUDgFAjsFwS2gMAhQWAnEDgFAvsFgS0gcEgQ2AkEToHAfkFgCwgcEgR2AoFTFF9g2ydsI3A41Auc\n8QnbCBwO9QJnfMI2AodDvcAZn7CNwOFQL3D6E7aPzaupqRmx0LcXAltQL3CaljUaUxfnnJdDAoGD\nIidw5J+wjcBBkRM48k/YRuCgyAkc+SdsI3BQcCaLIbAzCJwi8sBhzwSaIDBTMHD4M4EmCMwUDBz+\nTKAJAjMFA4c/E2iCwEzBwOkzgV9Nqqqq6vu0x/32VWXRZUXWLAT2QL5+ij7drDHrZY+z1z/YnEn3\n7NPECOwBuYGDnglc/3DWU99FYAUDBz0TiMBilAsc9EwgAovx4Ldxmp1r7ZsVOZOFwGI8+M1ZsNlG\nO/tmBPaLcoFX28cX2IcI7BcEtoDAIUFgJxA4BQL7BYEtIHBIENgJBE6BwH5BYAsIHBIEdgKBUyCw\nXxDYAgKHBIGdQOAUCOwXBLaAwP5ptQ4Q2IlCDbyk16DeS9NDBHaiUANXtLLWyvQQgZ0o1MBj1u5f\nV54eIrAThRp47/Rx0z8zHrUsb2xsnLgo5x4I7IZygdMcq9cofy7nPAR2Q7nA/i8sL+rA1etOu0+L\nOXC2n/8Ly2UGjm79JAX+/KnRD3/iNi3mwNl+/i8slxk4uvWTFPjosvGjfzDFZVrMgaPwkxk4uvWT\nFPiflnzF2C9cpsUcOAo/mYGjWz9JgVe+vWqN67SYA0fhJzNwdOsnKXDZX/860XVazIGj8JMZOLr1\nkxT4ri++uNN1WsyBo/CTGTi69ZMUeMvY0Ztcp8UcOAo/mYGjWz9JgR8ZNXas67SYA0fhJzNwdOsn\nKfDUXNNiDhyFn8zA0a2fpMCTlm3Y4Dot5sBR+MkMHN36SQpcW1Nb6zot5sBR+MkMHN36yfoePHrx\nL12nxf09OAI/qd+DI1s/SYEnP9Y6yXVazIGj8JMZOLr1kxR44kPvl7hOizlwFH4yA0e3fpICb7+/\n8mPXaTEHjsJPZuDo1k9S4LFj+410nRZz4Cj8ZAaObv2kXdHR4v6rXOxXdIT3k3tFR1TrJynwhx9u\nLXWdFnPgKPxkBo5u/SQFnj179nuu02IOHIWfzMDRrZ+kwH1vva2b69nUmANH4SczcHTrJ+v14NbW\nCtdpcb8eHIGf1NeDI1s/SYGHHDo00HVazIGj8JMZOLr1kxR4/Z13vu06LebAUfjJDBzd+uFctBic\ni3YiunPRX6yx09W++fX77Jt/590R56IzieVcdM19NTbOs2+ec519882HvEviXHQGsZyLVv1cr+p+\nHEmBG3JNi3kBG3JNIODHkRT4vhVqXxJTDH4cWZfs1Cp+SUwR+HHkBH6J7ckxLd4FLAo/jpzAlaw6\nx7R4F7Ao/DgILIaAH0dO4O61PZX+HlcUfhw5gVfruE6LdwGLwo+j8JuwqP4mJ6r7cfIYmNp7Qaru\nx8lbYHrvBam6Hydvgem9F6Tqfpy8Bab3XpCq+3HyFjj9XpDH59XU1Ix4PueRVF9A1f04MfwU3aK/\nPD91cc55qi+g6n6cvAWm916Qqvtx8hZYrfeCzImCfn5/zeTkLbBa7wWZE+X8/P+aycGZLDHK+fn/\nNZODwGKU8/P/ayYHgcUo55f+NfPIsCFDhtxY43E/BBZDwI+DwGKU8/P/ayYHgcUo5+f/10wOAotR\nzs//r5kcBBZDwI+DwGII+HEQWAwBPw4CiyHgx0FgMQT8OAgshoAfB4HFEPDjILAYAn4cBBZDwI+D\nwGII+HEQWAwBPw4CiyHgx0FgMQT8OAgshoAfB4HFEPDjILAYAn4cBBZDwI+DwGII+HEQWAwBPw4C\niyHgx0FgMQT8OAgshoAfB4HFEPDjILAYAn4cBBZDwI+DwGII+HEQWAwBPw4CiyHgx0FgMQT8OAgs\nhoAfB4HFEPDjILAYAn4cBBZDwI+DwGII+HEQWAwBPw4CiyHgx0FgMQT8OAgshoAfB4HFEPDjILAY\nAn4cBBZDwI+DwGII+HEQWAwBPw4Cm5w6aRko6GcDgf0yc3WX/paP+lHOLwME9kuyooXdYzxqaaiv\nr08uyrkHAruhXOAe5QcOlxqPjjdqTHwh5x4I7IZygTfUNb26KT1Uzi8DBA4JAT8OAosh4MdBYDEE\n/DgILIaAHweBxRDw4yCwGAJ+HAQWQ8CPg8BiCPhxEFgMAT8OAosh4MdBYDEE/DgILIaAHweBxRDw\n4yCwGAJ+HAQWQ8CPg8BiCPhxEFgMAT9OHgNTu2pRdT9O3gLTu2pRdT9O3gKnr1o8/nRNTc3Iwr+o\nTXU/Tt4Cp69abFne2NhYtdhhXhrVF1D1C/M5eQtM76pF1S/M5+CnaDHK+aW/xbHdzc3Ns5Z63M9b\n4D7NWRxxOCACp5B2Yf6RKo2+tR738xa4fVUm48c4HBCBU8R+YT7HW+ALsp45WOpwQAROEbsfB4HF\nEPDjILAYAn4cBBZDwI+DwGII+HEQWAwBPw4CiyHgx0FgMQT8OAgshoAfB4HFEPDjILAYAn4cBBZD\nwI+DwGII+HEQWIzu98/9hljpn1TbTyf7hXsEFqP73fMn21OHR9qnqOang8BeQWAEVs1PB4G9gsAI\nrJqfDgJ7BYERWDU/HQT2CgIjsGp+OgjsFQRGYNX8dBDYKwgcQeCZg20nygc/Yp+i2gIisIGPwAW2\ngKr76SCwVwrQTweBvVKAfjoI7JUC9NNBYK8UoJ8OAnulAP10ENgr0fvdZL+CavDjUfvpILBXove7\nYodt+OXoMHoIHBYERmAEdgOBERiBXUDgkCAwAiOwGwiMwAjsAgKHpEADX5r194bdsr8OArOCDdz+\ncCZP98mahMCsYANnh6pDYCEIjMAI7AYCIzACu4DAIUFgBEZgNxAYgVUL/MW37R880+NnvvwQWPXA\nn15i/+SofrN9+SGw8oEvt0+5HYFdQOAiDDxos40p/+EqkbmAJf9t332fNxHvfghsEDzw7vOm2ejw\nhKtE1gJW2fae6vTZe4H9ENggeGDVF1B1P4EDQ2AnCtBP4MAQ2IkC9BM4MAR2ogD9BA4MgZ0oQD+B\nA0NgJwrQT+DAENiJAvQTODAEdqIA/QQODIGdKEA/gQNDYCcK0E/gwBDYiQL0EzgwBHaiAP0EDiyv\ngVutAwUXsND9BA4sj4GX9BrUe6mrYLwLWPh+AgeWx8AVray10nh0fFF9fX35C5rgU/VWnmxvG9Z3\nuts+Ptc+HNnRPr5gtm34tM8FLHw/gYNG8tqsp64r87DfM34Dj1m7f1258ehEo0bdh4xtbrSxbK59\nvKDBPq6xDxsW2Mdzl9nHm/0tYOH7CRw0fv5s1lPP/jzrqTnZh/qDg4hT4L3Tx03/zN//prwCP494\n/CkaFCoITBwEJg4CEweBiYPAxEFg4iAwcRCYOAhMHAQmDgITx0fgYQNsb5s58Cr722h26mEfX2kf\n9uhoH1890H60obkFaPkJHDR63Zj11E29POzn6OcjsM8/AM94q9w3n7SPM/4APOQlMToF5idwYMK3\nE35knYf9HP0QOAUCF9oCqu4ncGAI7EaB+QkcWLyBXzxuG3797/bNb223j+vswx1r7OOGE7bhiYx3\nsQpAgfkJHDQ+eyPrqf/a42E/Rz/8mkQcBCYOAhMHgYmDwMRBYOIgMHG8Bt7QIzlz75jkUstQv53Z\nfOC+KTWWzcbYsv25ZPKqLZbN+vj19OaPJlS/YN07AIXgZxXKVsq2Eplly+Xw8xq4rrzi19PXtvay\nDPXbmc0zy8b9p2WzMbZuZ3+otW7Wx5bNT604Oci+2TeF4Gf7gllKIiuRWaZcDj+vgZsOfN2lfD8b\n1JoefqTdTqU2j195smcyvdkYf2zZfuLeU+Msm/VxU3rz9hsG1to2+6cQ/KxC2UoCK5FZllwOP6+B\nXz3M+v9wXWtvy/CX2u1kavwva1k/y2ZjbN3+iyVsumWzPn41vXnCDtbXuncACsHP+gWzlQRWIrMs\nuRx+XgNvGj120Z6yyqWWoX47s/nT20fXWTYbY+v2u48y62Z9bNn8ZuXkGbbN/ikEP+sXzFYSWInM\nsuRy+OGnaOIgMHEQmDgITBwEJg4CEweBiYPAxEFg4iAwcRCYOAhMHAQmjsTAx+aP3i3v6OEpDr/Q\ngWs32McN5l+I/HhV7feqn1hw+oNR7K37J/xMv65Evx5Feyrs15Tip9/0a2ZU82sqrX5Uvx5Hv+mP\nffqFD1w25dFtJWMWzv6QjV1TXf7JnG211VMf2TR8wuA5/7qAvbhl3YH5Q1nZ9tPd9etK9CtNtKfC\nfk0pfvpNv2ZGNb+GnWzQtLWtvfRrcvTHDf78wgdexkZV7GF9ZmqCP53x+wOaoPbM6IMnbzv1SrcJ\nxkUkJeyPDz5w/Sc3DKxtyrgeJQ949tum3ZIrT/Y8rZrf0VnP6tfjVOjX5GiPfR4/in+ixyZ3a4Jb\nW/pt2Dl3riaoPTPiwMnO8/60qOyoPqWErf/sZGf9upLM61HygGc//aZfM6OaX9PkXcZFO/pNf+yT\nSAJvu2PUwvdKp458bXzVKi747rCq764oHfYjY0oJ211e9oZ+XUnm9Sh5wLOfftOvmVHNb9JdyWRz\nWeVS/Zoc/bHPfwEl/RT9xpetQ9mf35Jz8AgoHj9JgT+qrPyVnCNHQ/H44UQHcRCYOAhMHAQmDgIT\nB4GJg8DEQWDiIDBxEJg4/w+wuc2w8hsF6wAAAABJRU5ErkJggg==\n"
       }
      ],
-     "prompt_number": 106
+     "prompt_number": 171
     },
     {
      "cell_type": "heading",
