just checking in

--- a/stat1/stat_2.ipynb
+++ b/stat1/stat_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c0b32c6ffbdeb2f36cbff2fbea554787268609afa83c6cfe9544fb6d73abd16"
+  "signature": "sha256:0cc5f69e65b951b0fd276b7e2b5f86ad589a5a28d4d2eb301519ae210d13c897"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -90,7 +90,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "a) Random b) Stratified c) Stratified?"
+      "a) Random b) Stratified c) Cluster"
      ]
     },
     {
