checking in, working on crossover

--- a/AI/Genetic Salesman.ipynb
+++ b/AI/Genetic Salesman.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:48fead4a67268ed6995210f091ff1a9ef458bda49785643a53ec39e84717fe0e"
+  "signature": "sha256:19d7fd9c69978d0243614e91b457c9f26a21aa4e306f9ead56510ac1261e94a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,6 +12,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "SIZE = 10\n",
+      "\n",
       "class Map(object):\n",
       "    def __init__(self, size):\n",
       "        self.size = size\n",
@@ -27,7 +29,7 @@
       "        self._map[city1-1][city2-1] = distance\n",
       "        self._map[city2-1][city1-1] = distance\n",
       "        \n",
-      "myMap = Map(10)\n",
+      "myMap = Map(SIZE)\n",
       "myMap.add_route(1,2,1)\n",
       "myMap.add_route(1,3,10)\n",
       "myMap.add_route(1,4,2)\n",
@@ -90,30 +92,81 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 33,
+       "prompt_number": 39,
        "text": [
         "[0, 1, 10, 2, 17, 13, 19, 11, 6, 5]\n",
         "[1, 0, 12, 9, 4, 2, 7, 19, 12, 4]\n",
         "[10, 12, 0, 4, 18, 20, 1, 4, 16, 13]\n",
         "[2, 9, 4, 0, 5, 3, 11, 14, 19, 1]\n",
-        "[17, 4, 18, 5, 0, 3, 11, 14, 19, 1]\n",
-        "[13, 2, 20, 3, 3, 0, None, None, None, None]\n",
-        "[19, 7, 1, 11, 11, None, 0, None, None, None]\n",
-        "[11, 19, 4, 14, 14, None, None, 0, None, None]\n",
-        "[6, 12, 16, 19, 19, None, None, None, 0, None]\n",
-        "[5, 4, 13, 1, 1, None, None, None, None, 0]"
+        "[17, 4, 18, 5, 0, 11, 5, 8, 2, 6]\n",
+        "[13, 2, 20, 3, 11, 0, 18, 6, 4, 3]\n",
+        "[19, 7, 1, 11, 5, 18, 0, 20, 9, 10]\n",
+        "[11, 19, 4, 14, 8, 6, 20, 0, 12, 7]\n",
+        "[6, 12, 16, 19, 2, 4, 9, 12, 0, 11]\n",
+        "[5, 4, 13, 1, 6, 3, 10, 7, 11, 0]"
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "import random\n",
+      "\n",
+      "def random_route():\n",
+      "    cities = [i for i in range(1,SIZE+1)]\n",
+      "    random.shuffle(cities)\n",
+      "    return cities\n",
+      "\n",
+      "def mutate(route):\n",
+      "    cities = [i for i in range(SIZE)]\n",
+      "    i, j = random.sample(cities,2)\n",
+      "    route[i],route[j] = route[j],route[i]\n",
+      "    \n",
+      "def cross(route1, route2):\n",
+      "    out = [None for i in range(SIZE)]\n",
+      "    while True:\n",
+      "        x = random.randint(0,9)\n",
+      "        out = route1[:x]+route2[x:]\n",
+      "        if(len(set(out))== SIZE):\n",
+      "            break\n",
+      "    return out\n",
+      "    \n",
+      "r1 = random_route()\n",
+      "r2 = random_route()\n",
+      "\n",
+      "print(r2)\n",
+      "mutate(r1)\n",
+      "print(r1)\n",
+      "print(cross(r1,r2))"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[7, 2, 8, 10, 5, 4, 6, 9, 3, 1]\n",
+        "[2, 6, 1, 7, 5, 10, 3, 8, 9, 4]\n",
+        "[7, 2, 8, 10, 5, 4, 6, 9, 3, 1]\n"
+       ]
+      }
+     ],
+     "prompt_number": 126
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
     }
    ],
    "metadata": {}
