--- a/AI/Genetic Salesman.ipynb
+++ b/AI/Genetic Salesman.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:19d7fd9c69978d0243614e91b457c9f26a21aa4e306f9ead56510ac1261e94a1"
+  "signature": "sha256:5a4381fa176e90fdf909361433aa4e46144bfcd7433d3fb591c7a1f5351fd350"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -92,7 +92,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 2,
        "text": [
         "[0, 1, 10, 2, 17, 13, 19, 11, 6, 5]\n",
         "[1, 0, 12, 9, 4, 2, 7, 19, 12, 4]\n",
@@ -107,7 +107,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -126,12 +126,24 @@
       "    route[i],route[j] = route[j],route[i]\n",
       "    \n",
       "def cross(route1, route2):\n",
-      "    out = [None for i in range(SIZE)]\n",
-      "    while True:\n",
-      "        x = random.randint(0,9)\n",
-      "        out = route1[:x]+route2[x:]\n",
-      "        if(len(set(out))== SIZE):\n",
-      "            break\n",
+      "    \"\"\"hmmm... a simple cross over is very unlikely \n",
+      "    to create a valid route.\n",
+      "    I ended up making up a different solution...\n",
+      "    First, we perform the cross in the normal way\n",
+      "    where we take the first n cities of parent 1\n",
+      "    but then instead of just taking the second half of parent 2\n",
+      "    we add in cities one at a time from parent 2 if and only if\n",
+      "    they are not already present.\n",
+      "    I hope that's ok....\n",
+      "    \"\"\"\n",
+      "\n",
+      "    x = random.randint(0,9)\n",
+      "    out = route1[:x]\n",
+      "    for city in route2:\n",
+      "        if city in out:\n",
+      "            pass\n",
+      "        else:\n",
+      "            out.append(city)\n",
       "    return out\n",
       "    \n",
       "r1 = random_route()\n",
@@ -149,13 +161,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[7, 2, 8, 10, 5, 4, 6, 9, 3, 1]\n",
-        "[2, 6, 1, 7, 5, 10, 3, 8, 9, 4]\n",
-        "[7, 2, 8, 10, 5, 4, 6, 9, 3, 1]\n"
+        "[9, 10, 2, 4, 1, 5, 8, 6, 3, 7]\n",
+        "[8, 3, 2, 5, 7, 1, 10, 9, 4, 6]\n",
+        "[8, 3, 2, 5, 9, 10, 4, 1, 6, 7]\n"
        ]
       }
      ],
-     "prompt_number": 126
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
