--- a/AI/Genetic Salesman.ipynb
+++ b/AI/Genetic Salesman.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a7d7527e408553f068474ad04a5e99de0da94429ce361e0d58edc40c68b316a5"
+  "signature": "sha256:a77fbbc3d7431fe6d07c19e069980f8c7777a00725be295c97f1e68cc2b46e5f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,17 +36,11 @@
       "        if(len(set(route))!= SIZE):\n",
       "            raise IndexError('length of route is incorrect', route)\n",
       "        distance = 0\n",
-      "        print(route)\n",
       "        for i in range(SIZE):\n",
-      "            print (i)\n",
-      "            #print(self._map[route[i]][route[(i+1)%SIZE]])\n",
       "            distance += self._map[route[i]-1][route[(i+1)%SIZE]-1]\n",
       "        return distance    \n",
-      "            \n",
-      "            \n",
-      "            \n",
-      "        \n",
-      "        \n",
+      "   \n",
+      "\n",
       "myMap = Map(SIZE)\n",
       "myMap.add_road(1,2,1)\n",
       "myMap.add_road(1,3,10)\n",
@@ -110,7 +104,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 45,
        "text": [
         "[0, 1, 10, 2, 17, 13, 19, 11, 6, 5]\n",
         "[1, 0, 12, 9, 4, 2, 7, 19, 12, 4]\n",
@@ -125,7 +119,7 @@
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
@@ -144,95 +138,59 @@
       "    route[i],route[j] = route[j],route[i]\n",
       "    \n",
       "def cross(route1, route2):\n",
-      "    \"\"\"hmmm... a simple cross over is very unlikely \n",
-      "    to create a valid route.\n",
+      "    \"\"\"hmmm... a simple cross over is very unlikely to \n",
+      "    create a valid route.\n",
       "    I ended up making up a different solution...\n",
       "    First, we perform the cross in the normal way\n",
       "    where we take the first n cities of parent 1\n",
       "    but then instead of just taking the second half of parent 2\n",
       "    we add in cities one at a time from parent 2 if and only if\n",
       "    they are not already present.\n",
-      "    I hope that's ok....\n",
       "    \"\"\"\n",
-      "    x = random.randint(0,9)\n",
+      "    x = random.randint(0,SIZE-1)\n",
       "    out = route1[:x]\n",
       "    for city in route2:\n",
       "        if city in out:\n",
       "            pass\n",
       "        else:\n",
       "            out.append(city)\n",
-      "    return out"
+      "    return out\n",
+      "\n",
+      "def Genetic_Algorithm(population_size = 3, mutations = 5, crossovers = 5, generations = 10):\n",
+      "    pop = [random_route() for i in range(population_size)]     \n",
+      "    for i in range(generations):\n",
+      "        for m in range(mutations):\n",
+      "            mutant = pop[random.randint(0,population_size-1)][:]\n",
+      "            mutate(mutant)\n",
+      "            pop.append(mutant)\n",
+      "        for c in range(crossovers):\n",
+      "            x, y = pop[random.randint(0,population_size+mutations-1)], pop[random.randint(0,population_size+mutations-1)]\n",
+      "            pop.append(cross(x,y))\n",
+      "        distances = []\n",
+      "        for route in pop:\n",
+      "            distances.append(myMap.route_distance(route))\n",
+      "        \n",
+      "        pop = [a for b,a in sorted(zip(distances,pop))]\n",
+      "        pop = pop[:population_size]\n",
+      "        \n",
+      "    return (pop[0], myMap.route_distance(pop[0]))    \n",
+      "\n",
+      "    \n",
+      "Genetic_Algorithm(3)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[7, 4, 3, 6, 8, 5, 1, 9, 10, 2]\n",
-        "[2, 6, 1, 4, 5, 9, 3, 8, 7, 10]\n",
-        "[2, 7, 4, 3, 6, 8, 5, 1, 9, 10]\n"
-       ]
-      }
-     ],
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "myMap.route_distance(random_route())\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[2, 10, 8, 5, 7, 9, 1, 4, 6, 3]\n",
-        "0\n",
-        "1\n",
-        "2\n",
-        "3\n",
-        "4\n",
-        "5\n",
-        "6\n",
-        "7\n",
-        "8\n",
-        "9\n"
-       ]
-      },
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 41,
+       "prompt_number": 115,
        "text": [
-        "76"
+        "([2, 5, 7, 3, 8, 9, 1, 4, 10, 6], 40)"
        ]
       }
      ],
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "  "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-       ]
-      }
-     ],
-     "prompt_number": 43
+     "prompt_number": 115
     }
    ],
    "metadata": {}
