--- a/AI/Genetic Salesman.ipynb
+++ b/AI/Genetic Salesman.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a77fbbc3d7431fe6d07c19e069980f8c7777a00725be295c97f1e68cc2b46e5f"
+  "signature": "sha256:df41665ad3f0886c6d3c76fcbd489348a24378624e9f89eaede0e44aa3797dd1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,10 +9,18 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Traveling Salesman Using a Genetic Algorithm"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "SIZE = 10\n",
+      "SIZE = 15\n",
       "\n",
       "class Map(object):\n",
       "    \n",
@@ -42,59 +50,34 @@
       "   \n",
       "\n",
       "myMap = Map(SIZE)\n",
-      "myMap.add_road(1,2,1)\n",
-      "myMap.add_road(1,3,10)\n",
-      "myMap.add_road(1,4,2)\n",
-      "myMap.add_road(1,5,17)\n",
-      "myMap.add_road(1,6,13)\n",
-      "myMap.add_road(1,7,19)\n",
-      "myMap.add_road(1,8,11)\n",
-      "myMap.add_road(1,9,6)\n",
-      "myMap.add_road(1,10,5)\n",
       "\n",
-      "myMap.add_road(2,3,12)\n",
-      "myMap.add_road(2,4,9)\n",
-      "myMap.add_road(2,5,4)\n",
-      "myMap.add_road(2,6,2)\n",
-      "myMap.add_road(2,7,7)\n",
-      "myMap.add_road(2,8,19)\n",
-      "myMap.add_road(2,9,12)\n",
-      "myMap.add_road(2,10,4)\n",
+      "myMap.add_road(1,2,1),myMap.add_road(1,3,10),myMap.add_road(1,4,2),myMap.add_road(1,5,17),myMap.add_road(1,6,13),myMap.add_road(1,7,19),myMap.add_road(1,8,11),myMap.add_road(1,9,6),myMap.add_road(1,10,5),myMap.add_road(1,11,17),myMap.add_road(1,12,1),myMap.add_road(1,13,12),myMap.add_road(1,14,7),myMap.add_road(1,15,10)\n",
       "\n",
-      "myMap.add_road(3,4,4)\n",
-      "myMap.add_road(3,5,18)\n",
-      "myMap.add_road(3,6,20)\n",
-      "myMap.add_road(3,7,1)\n",
-      "myMap.add_road(3,8,4)\n",
-      "myMap.add_road(3,9,16)\n",
-      "myMap.add_road(3,10,13)\n",
+      "myMap.add_road(2,3,12),myMap.add_road(2,4,9),myMap.add_road(2,5,4),myMap.add_road(2,6,2),myMap.add_road(2,7,7),myMap.add_road(2,8,19),myMap.add_road(2,9,12),myMap.add_road(2,10,4),myMap.add_road(2,11,14),myMap.add_road(2,12,3),myMap.add_road(2,13,17),myMap.add_road(2,14,18),myMap.add_road(2,15,16)\n",
       "\n",
-      "myMap.add_road(4,5,5)\n",
-      "myMap.add_road(4,6,3)\n",
-      "myMap.add_road(4,7,11)\n",
-      "myMap.add_road(4,8,14)\n",
-      "myMap.add_road(4,9,19)\n",
-      "myMap.add_road(4,10,1)\n",
+      "myMap.add_road(3,4,4),myMap.add_road(3,5,18),myMap.add_road(3,6,20),myMap.add_road(3,7,1),myMap.add_road(3,8,4),myMap.add_road(3,9,16),myMap.add_road(3,10,13),myMap.add_road(3,11,20),myMap.add_road(3,12,2),myMap.add_road(3,13,6),myMap.add_road(3,14,15),myMap.add_road(3,15,18)\n",
       "\n",
-      "myMap.add_road(5,6,11)\n",
-      "myMap.add_road(5,7,5)\n",
-      "myMap.add_road(5,8,8)\n",
-      "myMap.add_road(5,9,2)\n",
-      "myMap.add_road(5,10,6)\n",
+      "myMap.add_road(4,5,5),myMap.add_road(4,6,3),myMap.add_road(4,7,11),myMap.add_road(4,8,14),myMap.add_road(4,9,19),myMap.add_road(4,10,1),myMap.add_road(4,11,11),myMap.add_road(4,12,7),myMap.add_road(4,13,16),myMap.add_road(4,14,5),myMap.add_road(4,15,2)\n",
       "\n",
-      "myMap.add_road(6,7,18)\n",
-      "myMap.add_road(6,8,6)\n",
-      "myMap.add_road(6,9,4)\n",
-      "myMap.add_road(6,10,3)\n",
+      "myMap.add_road(5,6,11),myMap.add_road(5,7,5),myMap.add_road(5,8,8),myMap.add_road(5,9,2),myMap.add_road(5,10,6),myMap.add_road(5,11,15),myMap.add_road(5,12,12),myMap.add_road(5,13,8),myMap.add_road(5,14,8),myMap.add_road(5,15,17)\n",
       "\n",
-      "myMap.add_road(7,8,20)\n",
-      "myMap.add_road(7,9,9)\n",
-      "myMap.add_road(7,10,10)\n",
+      "myMap.add_road(6,7,18),myMap.add_road(6,8,6),myMap.add_road(6,9,4),myMap.add_road(6,10,3),myMap.add_road(6,11,15),myMap.add_road(6,12,7),myMap.add_road(6,13,10),myMap.add_road(6,14,16),myMap.add_road(6,15,9)\n",
       "\n",
-      "myMap.add_road(8,9,12)\n",
-      "myMap.add_road(8,10,7)\n",
+      "myMap.add_road(7,8,20),myMap.add_road(7,9,9),myMap.add_road(7,10,10),myMap.add_road(7,11,5),myMap.add_road(7,12,13),myMap.add_road(7,13,3),myMap.add_road(7,14,18),myMap.add_road(7,15,19)\n",
       "\n",
-      "myMap.add_road(9,10,11)\n",
+      "myMap.add_road(8,9,12),myMap.add_road(8,10,7),myMap.add_road(8,11,20),myMap.add_road(8,12,2),myMap.add_road(8,13,6),myMap.add_road(8,14,3),myMap.add_road(8,15,9)\n",
+      "\n",
+      "myMap.add_road(9,10,11),myMap.add_road(9,11,8),myMap.add_road(9,12,13),myMap.add_road(9,13,16),myMap.add_road(9,14,15),myMap.add_road(9,15,3)\n",
+      "\n",
+      "myMap.add_road(10,11,14),myMap.add_road(10,12,14),myMap.add_road(10,13,10),myMap.add_road(10,14,20),myMap.add_road(10,15,19)\n",
+      "\n",
+      "myMap.add_road(11,12,14),myMap.add_road(11,13,15),myMap.add_road(11,14,8),myMap.add_road(11,15,1)\n",
+      "\n",
+      "myMap.add_road(12,13,1),myMap.add_road(12,14,3),myMap.add_road(12,15,4)\n",
+      "\n",
+      "myMap.add_road(13,14,9),myMap.add_road(13,15,17)\n",
+      "\n",
+      "myMap.add_road(14,15,1)\n",
       "\n",
       "myMap\n"
      ],
@@ -104,26 +87,31 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 45,
+       "prompt_number": 131,
        "text": [
-        "[0, 1, 10, 2, 17, 13, 19, 11, 6, 5]\n",
-        "[1, 0, 12, 9, 4, 2, 7, 19, 12, 4]\n",
-        "[10, 12, 0, 4, 18, 20, 1, 4, 16, 13]\n",
-        "[2, 9, 4, 0, 5, 3, 11, 14, 19, 1]\n",
-        "[17, 4, 18, 5, 0, 11, 5, 8, 2, 6]\n",
-        "[13, 2, 20, 3, 11, 0, 18, 6, 4, 3]\n",
-        "[19, 7, 1, 11, 5, 18, 0, 20, 9, 10]\n",
-        "[11, 19, 4, 14, 8, 6, 20, 0, 12, 7]\n",
-        "[6, 12, 16, 19, 2, 4, 9, 12, 0, 11]\n",
-        "[5, 4, 13, 1, 6, 3, 10, 7, 11, 0]"
+        "[0, 1, 10, 2, 17, 13, 19, 11, 6, 5, 17, 1, 12, 7, 10]\n",
+        "[1, 0, 12, 9, 4, 2, 7, 19, 12, 4, 14, 3, 17, 18, 16]\n",
+        "[10, 12, 0, 4, 18, 20, 1, 4, 16, 13, 20, 2, 6, 15, 18]\n",
+        "[2, 9, 4, 0, 5, 3, 11, 14, 19, 1, 11, 7, 16, 5, 2]\n",
+        "[17, 4, 18, 5, 0, 11, 5, 8, 2, 6, 15, 12, 8, 8, 17]\n",
+        "[13, 2, 20, 3, 11, 0, 18, 6, 4, 3, 15, 7, 10, 16, 9]\n",
+        "[19, 7, 1, 11, 5, 18, 0, 20, 9, 10, 5, 13, 3, 18, 19]\n",
+        "[11, 19, 4, 14, 8, 6, 20, 0, 12, 7, 20, 2, 6, 3, 9]\n",
+        "[6, 12, 16, 19, 2, 4, 9, 12, 0, 11, 8, 13, 16, 15, 3]\n",
+        "[5, 4, 13, 1, 6, 3, 10, 7, 11, 0, 14, 14, 10, 20, 19]\n",
+        "[17, 14, 20, 11, 15, 15, 5, 20, 8, 14, 0, 14, 15, 8, 1]\n",
+        "[1, 3, 2, 7, 12, 7, 13, 2, 13, 14, 14, 0, 1, 3, 4]\n",
+        "[12, 17, 6, 16, 8, 10, 3, 6, 16, 10, 15, 1, 0, 9, 17]\n",
+        "[7, 18, 15, 5, 8, 16, 18, 3, 15, 20, 8, 3, 9, 0, 1]\n",
+        "[10, 16, 18, 2, 17, 9, 19, 9, 3, 19, 1, 4, 17, 1, 0]"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 131
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "import random\n",
       "\n",
@@ -156,7 +144,7 @@
       "            out.append(city)\n",
       "    return out\n",
       "\n",
-      "def Genetic_Algorithm(population_size = 3, mutations = 5, crossovers = 5, generations = 10):\n",
+      "def Genetic_Algorithm(population_size = 10, mutations = 5, crossovers = 5, generations = 10):\n",
       "    pop = [random_route() for i in range(population_size)]     \n",
       "    for i in range(generations):\n",
       "        for m in range(mutations):\n",
@@ -166,6 +154,7 @@
       "        for c in range(crossovers):\n",
       "            x, y = pop[random.randint(0,population_size+mutations-1)], pop[random.randint(0,population_size+mutations-1)]\n",
       "            pop.append(cross(x,y))\n",
+      "        \n",
       "        distances = []\n",
       "        for route in pop:\n",
       "            distances.append(myMap.route_distance(route))\n",
@@ -176,7 +165,7 @@
       "    return (pop[0], myMap.route_distance(pop[0]))    \n",
       "\n",
       "    \n",
-      "Genetic_Algorithm(3)"
+      "Genetic_Algorithm(20, 5, 10, 30)"
      ],
      "language": "python",
      "metadata": {},
@@ -184,13 +173,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 115,
+       "prompt_number": 134,
        "text": [
-        "([2, 5, 7, 3, 8, 9, 1, 4, 10, 6], 40)"
+        "([15, 9, 5, 14, 8, 3, 12, 13, 1, 2, 6, 4, 10, 7, 11], 58)"
        ]
       }
      ],
-     "prompt_number": 115
+     "prompt_number": 134
     }
    ],
    "metadata": {}
