still working on it. calling it a day

--- a/stat1/stat_3.ipynb
+++ b/stat1/stat_3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d82fcacfdf5e188308e9a84d79eb01005fa5f9fbbf818d4b41e1cb94a5551fd3"
+  "signature": "sha256:342d6c90520ea116ab925005a82f2c4b5780e2c13f112aa7aad327fa9af74a65"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -292,7 +292,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%R cat(100*qnorm(0.9)+ 500)"
+      "%%R \n",
+      "cat('a) ',100*qnorm(0.9)+ 500, '\\n')\n",
+      "cat('b) ',100*qnorm(0.6)+ 500, ' We call this the 60th percentile? \\n')"
      ],
      "language": "python",
      "metadata": {},
@@ -301,46 +303,12 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "628.1552"
+        "a)  628.1552 \n",
+        "b)  525.3347  We call this the 60th percentile? \n"
        ]
       }
      ],
-     "prompt_number": 111
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 110,
-       "text": [
-        "630.07953103563943"
-       ]
-      }
-     ],
-     "prompt_number": 110
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 109
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 112
     },
     {
      "cell_type": "heading",
@@ -351,12 +319,44 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "cat('a) ', sample(1:1000,50), '\\n')\n",
+      "cat('b)  hmmm... I\\'m not totally sure. It\\'s possible that the order of the people on the list may')\n",
+      "cat(' be sorted by age or voting \\n preference, in which case you\\'d need a good random sample for each precinct.')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "a)  719 782 104 826 814 128 316 109 519 592 841 115 487 456 124 573 337 476 580 435 833 898 768 32 119 717 682 663 492 414 773 683 238 977 386 117 991 61 329 91 267 491 373 780 405 956 328 283 214 292 \n",
+        "b)  hmmm... I'm not totally sure. It's possible that the order of the people on the list may be sorted by age or voting \n",
+        " preference, in which case you'd need a good random sample for each precinct."
+       ]
+      }
+     ],
+     "prompt_number": 126
+    },
+    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
      "source": [
       "4.82 "
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
