hide working nice

--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:30da38d2c7453651e61586cb0f6284533cd3451db30586713cb5bc89d3bb4095"
+  "signature": "sha256:a6cfd5525068e6855769f05a68346fa16474b64d2e947bd215e18e0046edfa64"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,40 +12,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from IPython.display import HTML\n",
-      "\n",
-      "print ('yo')\n",
-      "def hide():\n",
-      "    return HTML('''<script>\n",
-      "code_show=true; \n",
-      "function code_toggle() {\n",
-      " if (code_show){\n",
-      " $('div.input').hide();\n",
-      " } else {\n",
-      " $('div.input').show();\n",
-      " }\n",
-      " code_show = !code_show\n",
-      "} \n",
-      "$( document ).ready(code_toggle);\n",
-      "</script>\n",
-      "<p>The raw code for this IPython notebook is by default hidden for easier reading.</p>\n",
-      "\n",
-      "<p>To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.</p>\n",
-      "<p>I found the code for this feature <a href=\"http://blog.nextgenetics.net/?e=102\">here</a>.</p>\n",
-      "''')\n",
-      "\n",
+      "from tools import hide, HTML\n",
       "hide()\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "yo\n"
-       ]
-      },
       {
        "html": [
         "<script>\n",
@@ -63,13 +35,13 @@
         "<p>The raw code for this IPython notebook is by default hidden for easier reading.</p>\n",
         "\n",
         "<p>To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.</p>\n",
-        "<p>I found the code for this feature <a href=\"http://blog.nextgenetics.net/?e=102\">here</a>.</p>\n"
+        "\n"
        ],
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "<IPython.core.display.HTML at 0xb52596ac>"
+        "<IPython.core.display.HTML at 0xb5156a0c>"
        ]
       }
      ],
@@ -79,7 +51,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print (\"what's up\")"
+      "print (\"what's up\")\n",
+      "HTML('<h1 style=\"color:blue\">$ \\\\frac y{y^2} = \\sigma$</h1>')"
      ],
      "language": "python",
      "metadata": {},
@@ -90,17 +63,60 @@
        "text": [
         "what's up\n"
        ]
+      },
+      {
+       "html": [
+        "<h1 style=\"color:blue\">$ \\frac y{y^2} = \\sigma$</h1>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "<IPython.core.display.HTML at 0xb517462c>"
+       ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "45"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "45"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "45545"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "45545"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
